# MyCadStarter

./: .gitignore  CMakeLists.txt  README.md
app/: MainWindow.cpp  MainWindow.h
core/commands/: CommandManager.cpp  CommandManager.h
core/project/: ProjectModel.cpp  ProjectModel.h  SceneNode.h
core/utils/: AppStrings.cpp  AppStrings.h
docs/: Doxyfile.in
geometry/occ/: OccImportExport.cpp  OccImportExport.h  OccPrimitiveBuilder.cpp  OccPrimitiveBuilder.h
resources/: resources.qrc
tests/: test_appstrings.cpp  test_commandmanager.cpp
ui/docks/: PropertyDock.cpp  PropertyDock.h  SceneTreeDock.cpp  SceneTreeDock.h
ui/viewport/: ViewportWidget.cpp  ViewportWidget.h
